# doggtalk-api

./: .gitignore  Cargo.toml  README.md  schema.sql
res/: error_code.json
src/: main.rs
src/common/: web.rs
src/service_mgr/: app.rs  base.rs  manager.rs  mod.rs  reply.rs  topic.rs  user.rs
src/service_sdk/: base.rs  home.rs  mod.rs  reply.rs  start.rs  topic.rs  user.rs
src/shared/: base.rs  data.rs  hash.rs  jwt.rs  mod.rs
src/shared/model/: app.rs  manager.rs  mod.rs  reply.rs  topic.rs  user.rs
src/shared/web/: error_code.rs  mod.rs  result.rs  validate.rs  wrapper.rs
