[package]
name = "doggtalk-api"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
tokio = { version = "1.24.1",features=["full"]}
axum ={version="0.6.2",features = ["multipart","headers"] }
serde = { version = "1", features = ["derive"] }
serde_json = {version="1"}
jsonwebtoken ="8.2"
once_cell = "1.8"